{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 36,
  "lineage": "71c0982f-757b-aea4-817f-6255007f2447",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rancher_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce2cb35386fc22e9",
            "arn": "arn:aws:ec2:us-west-1:459391715545:instance/i-05cadde30de466058",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cadde30de466058",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "terraform-setup-rancher20240218065556518300000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e518d543b071044a",
            "private_dns": "ip-10-0-0-114.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.114",
            "public_dns": "ec2-54-151-37-228.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.37.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-093cdd516870729d8",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0749ae93be838c529",
            "tags": {
              "Creator": "rancher-quickstart",
              "Name": "terraform-setup-rancher-server"
            },
            "tags_all": {
              "Creator": "rancher-quickstart",
              "Name": "terraform-setup-rancher-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083bda5d41d766860"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.rancher_gateway",
            "aws_key_pair.create_key_pair",
            "aws_route_table.rancher_route_table",
            "aws_route_table_association.rancher_route_table_association",
            "aws_security_group.rancher_sg_allowall",
            "aws_subnet.rancher_subnet",
            "aws_vpc.rancher_vpc",
            "tls_private_key.global_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rancher_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:459391715545:internet-gateway/igw-09e9309e90bc374e0",
            "id": "igw-09e9309e90bc374e0",
            "owner_id": "459391715545",
            "tags": {
              "Name": "terraform-setup-rancher-gateway"
            },
            "tags_all": {
              "Name": "terraform-setup-rancher-gateway"
            },
            "vpc_id": "vpc-0bab5e8611149833e"
          },
          "dependencies": [
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rancher_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:459391715545:route-table/rtb-0a1299763ad161bff",
            "id": "rtb-0a1299763ad161bff",
            "owner_id": "459391715545",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e9309e90bc374e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-setup-rancher-route-table"
            },
            "tags_all": {
              "Name": "terraform-setup-rancher-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab5e8611149833e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rancher_gateway",
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rancher_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9324656502801a9",
            "route_table_id": "rtb-0a1299763ad161bff",
            "subnet_id": "subnet-0749ae93be838c529"
          },
          "dependencies": [
            "aws_internet_gateway.rancher_gateway",
            "aws_route_table.rancher_route_table",
            "aws_subnet.rancher_subnet",
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rancher_sg_allowall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:459391715545:security-group/sg-083bda5d41d766860",
            "description": "Rancher - allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083bda5d41d766860",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-setup-rancher-allowall",
            "name_prefix": "",
            "owner_id": "459391715545",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "rancher-terraform"
            },
            "tags_all": {
              "Creator": "rancher-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bab5e8611149833e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rancher_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:459391715545:subnet/subnet-0749ae93be838c529",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0749ae93be838c529",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459391715545",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-setup-rancher-subnet"
            },
            "tags_all": {
              "Name": "terraform-setup-rancher-subnet"
            },
            "vpc_id": "vpc-0bab5e8611149833e"
          },
          "dependencies": [
            "aws_vpc.rancher_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rancher_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:459391715545:vpc/vpc-0bab5e8611149833e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f12e5095ae70d85",
            "default_route_table_id": "rtb-0b5deb68d08188c05",
            "default_security_group_id": "sg-0c2a2f23e7af4abf7",
            "dhcp_options_id": "dopt-08533873c06d7ad30",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bab5e8611149833e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5deb68d08188c05",
            "owner_id": "459391715545",
            "tags": {
              "Name": "terraform-setup-rancher-vpc"
            },
            "tags_all": {
              "Name": "terraform-setup-rancher-vpc"
            }
          }
        }
      ]
    }
  ]
}